# graphql-practice

./: .env  .gitignore  Cargo.toml  LICENSE  readme.md
migrations/: 20220111232157_addedTables.sql
sql/: insertWorker.sql  selectWorker.sql
src/: inputs.rs  main.rs  schema.rs
src/model/: department.rs  mod.rs  project.rs  task.rs  worker.rs
